<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.phone">
        
    <PreferenceCategory 
        android:title="@string/cell_broadcast_sms">
            
    <CheckBoxPreference 
        android:key="button_enable_disable_cell_bc_sms" 
        android:title="@string/enable_disable_cell_bc_sms"
        android:persistent="false"
        android:summaryOn="@string/cell_bc_sms_enable"
        android:summaryOff="@string/cell_bc_sms_disable"/>
    
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/cb_sms_settings">
        
        <ListPreference
            android:key="list_language" 
            android:title="@string/list_language_title"
            android:summary="@string/list_language_summary"
            android:entries="@array/list_language_entries"
            android:entryValues="@array/list_language_values"
            android:dialogTitle="@string/list_language_dtitle"/>
            
        <CheckBoxPreference 
                android:key="button_emergency_broadcast" 
                android:title="@string/enable_disable_emergency_broadcast"
                android:persistent="false"
                android:summaryOn="@string/emergency_broadcast_enable"
                android:summaryOff="@string/emergency_broadcast_disable"/>
                
        <CheckBoxPreference 
                android:key="button_administrative" 
                android:title="@string/enable_disable_administrative"
                android:persistent="false"
                android:summaryOn="@string/administrative_enable"
                android:summaryOff="@string/administrative_disable"/>
                
        <CheckBoxPreference 
                android:key="button_maintenance" 
                android:title="@string/enable_disable_maintenance"
                android:persistent="false"
                android:summaryOn="@string/maintenance_enable"
                android:summaryOff="@string/maintenance_disable"/>
                
        <CheckBoxPreference 
                android:key="button_local_weather" 
                android:title="@string/enable_disable_local_weather"
                android:persistent="false"
                android:summaryOn="@string/local_weather_enable"
                android:summaryOff="@string/local_weather_disable"/>
                
        <CheckBoxPreference 
                android:key="button_atr" 
                android:title="@string/enable_disable_atr"
                android:persistent="false"
                android:summaryOn="@string/atr_enable"
                android:summaryOff="@string/atr_disable"/>
                
        <CheckBoxPreference 
                android:key="button_lafs" 
                android:title="@string/enable_disable_lafs"
                android:persistent="false"
                android:summaryOn="@string/lafs_enable"
                android:summaryOff="@string/lafs_disable"/>
                
        <CheckBoxPreference 
                android:key="button_restaurants" 
                android:title="@string/enable_disable_restaurants"
                android:persistent="false"
                android:summaryOn="@string/restaurants_enable"
                android:summaryOff="@string/restaurants_disable"/>
                
        <CheckBoxPreference 
                android:key="button_lodgings" 
                android:title="@string/enable_disable_lodgings"
                android:persistent="false"
                android:summaryOn="@string/lodgings_enable"
                android:summaryOff="@string/lodgings_disable"/>
                
        <CheckBoxPreference 
                android:key="button_retail_directory" 
                android:title="@string/enable_disable_retail_directory"
                android:persistent="false"
                android:summaryOn="@string/retail_directory_enable"
                android:summaryOff="@string/retail_directory_disable"/>
                
        <CheckBoxPreference 
                android:key="button_advertisements" 
                android:title="@string/enable_disable_advertisements"
                android:persistent="false"
                android:summaryOn="@string/advertisements_enable"
                android:summaryOff="@string/advertisements_disable"/>
                
        <CheckBoxPreference 
                android:key="button_stock_quotes" 
                android:title="@string/enable_disable_stock_quotes"
                android:persistent="false"
                android:summaryOn="@string/stock_quotes_enable"
                android:summaryOff="@string/stock_quotes_disable"/>
                
        <CheckBoxPreference 
                android:key="button_eo" 
                android:title="@string/enable_disable_eo"
                android:persistent="false"
                android:summaryOn="@string/eo_enable"
                android:summaryOff="@string/eo_disable"/>
                
        <CheckBoxPreference 
                android:key="button_mhh" 
                android:title="@string/enable_disable_mhh"
                android:persistent="false"
                android:summaryOn="@string/mhh_enable"
                android:summaryOff="@string/mhh_disable"/>
                
        <CheckBoxPreference 
                android:key="button_technology_news" 
                android:title="@string/enable_disable_technology_news"
                android:persistent="false"
                android:summaryOn="@string/technology_news_enable"
                android:summaryOff="@string/technology_news_disable"/>
                
        <CheckBoxPreference 
                android:key="button_multi_category" 
                android:title="@string/enable_disable_multi_category"
                android:persistent="false"
                android:summaryOn="@string/multi_category_enable"
                android:summaryOff="@string/multi_category_disable"/>
                
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/general_news_settings">
        
        <CheckBoxPreference 
                android:key="button_local_general_news" 
                android:title="@string/enable_disable_local"
                android:persistent="false"
                android:summaryOn="@string/local_enable"
                android:summaryOff="@string/local_disable"/>
                
        <CheckBoxPreference 
                android:key="button_regional_general_news" 
                android:title="@string/enable_disable_regional"
                android:persistent="false"
                android:summaryOn="@string/regional_enable"
                android:summaryOff="@string/regional_disable"/>
                
        <CheckBoxPreference 
                android:key="button_national_general_news" 
                android:title="@string/enable_disable_national"
                android:persistent="false"
                android:summaryOn="@string/national_enable"
                android:summaryOff="@string/national_disable"/>
                
        <CheckBoxPreference 
                android:key="button_international_general_news" 
                android:title="@string/enable_disable_international"
                android:persistent="false"
                android:summaryOn="@string/international_enable"
                android:summaryOff="@string/international_disable"/>
        <!--
        <ListPreference 
                android:key="list_general_news"
                android:title="@string/general_news_title"
                android:summary="@string/general_news_summary"
                android:entries="@array/general_news_entries"
                android:entryValues="@array/general_news_entryvalues"
                android:dialogTitle="@string/general_news_dialogtitle"/> -->
                
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/bf_news_settings">
        
        <CheckBoxPreference 
                android:key="button_local_bf_news" 
                android:title="@string/enable_disable_local"
                android:persistent="false"
                android:summaryOn="@string/local_enable"
                android:summaryOff="@string/local_disable"/>
                
        <CheckBoxPreference 
                android:key="button_regional_bf_news" 
                android:title="@string/enable_disable_regional"
                android:persistent="false"
                android:summaryOn="@string/regional_enable"
                android:summaryOff="@string/regional_disable"/>
                
        <CheckBoxPreference 
                android:key="button_national_bf_news" 
                android:title="@string/enable_disable_national"
                android:persistent="false"
                android:summaryOn="@string/national_enable"
                android:summaryOff="@string/national_disable"/>
                
        <CheckBoxPreference 
                android:key="button_international_bf_news" 
                android:title="@string/enable_disable_international"
                android:persistent="false"
                android:summaryOn="@string/international_enable"
                android:summaryOff="@string/international_disable"/>
                
        <!--    
        <ListPreference 
                android:key="list_bf"
                android:title="@string/bf_news_title"
                android:summary="@string/bf_news_summary"
                android:entries="@array/bf_news_entries"
                android:entryValues="@array/bf_news_entryvalues"
                android:dialogTitle="@string/bf_news_dialogtitle"/> -->
    
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/sports_news_settings">
        
        <CheckBoxPreference 
                android:key="button_local_sports_news" 
                android:title="@string/enable_disable_local"
                android:persistent="false"
                android:summaryOn="@string/local_enable"
                android:summaryOff="@string/local_disable"/>
                
        <CheckBoxPreference 
                android:key="button_regional_sports_news" 
                android:title="@string/enable_disable_regional"
                android:persistent="false"
                android:summaryOn="@string/regional_enable"
                android:summaryOff="@string/regional_disable"/>
                
        <CheckBoxPreference 
                android:key="button_national_sports_news" 
                android:title="@string/enable_disable_national"
                android:persistent="false"
                android:summaryOn="@string/national_enable"
                android:summaryOff="@string/national_disable"/>
                
        <CheckBoxPreference 
                android:key="button_international_sports_news" 
                android:title="@string/enable_disable_international"
                android:persistent="false"
                android:summaryOn="@string/international_enable"
                android:summaryOff="@string/international_disable"/>
                
        <!--    
        <ListPreference 
                android:key="list_sports_news"
                android:title="@string/sports_news_title"
                android:summary="@string/sports_news_summary"
                android:entries="@array/sports_news_entries"
                android:entryValues="@array/sports_news_entryvalues"
                android:dialogTitle="@string/sports_news_dialogtitle"/> -->
                
    </PreferenceCategory>
    
    <PreferenceCategory
            android:title="@string/entertainment_news_settings">
        
        <CheckBoxPreference 
                android:key="button_local_entertainment_news" 
                android:title="@string/enable_disable_local"
                android:persistent="false"
                android:summaryOn="@string/local_enable"
                android:summaryOff="@string/local_disable"/>
                
        <CheckBoxPreference 
                android:key="button_regional_entertainment_news" 
                android:title="@string/enable_disable_regional"
                android:persistent="false"
                android:summaryOn="@string/regional_enable"
                android:summaryOff="@string/regional_disable"/>
                
        <CheckBoxPreference 
                android:key="button_national_entertainment_news" 
                android:title="@string/enable_disable_national"
                android:persistent="false"
                android:summaryOn="@string/national_enable"
                android:summaryOff="@string/national_disable"/>
                
        <CheckBoxPreference 
                android:key="button_international_entertainment_news" 
                android:title="@string/enable_disable_international"
                android:persistent="false"
                android:summaryOn="@string/international_enable"
                android:summaryOff="@string/international_disable"/>
                
        <!--    
        <ListPreference 
                android:key="list_entertainment_news"
                android:title="@string/entertainment_news_title"
                android:summary="@string/entertainment_news_summary"
                android:entries="@array/entertainment_news_entries"
                android:entryValues="@array/entertainment_news_entryvalues"
                android:dialogTitle="@string/entertainment_news_dialogtitle"/> -->
                
    </PreferenceCategory>

</PreferenceScreen>   
